# Cockatoo-v1

./: .gitignore  Cockatoo_v1_installer.py  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: .gitignore
data/config/: app_config.yaml  llm_config.yaml  shortcuts.json  tracker_config.yaml  ui_config.yaml  user_config.yaml
scripts/: diagnostics.py  setup.py
src/: __init__.py
src/ai_engine/: __init__.py  conversation_memory.py  embedding_service.py  llm_client.py  model_manager.py  prompt_templates.py  rag_engine.py  summarizer.py  tagging.py
src/core/: __init__.py  app.py  config.py  constants.py  exceptions.py  logger.py
src/database/: __init__.py  conversation_client.py  debugger.py  document_client.py  finalize_database.py  initial_migration.py  models.py  queries.py  security.py  sqlite_client.py
src/database/migrations/: __init__.py  base_migration.py  database_initializer.py  migration_config.py  migration_manager.py  migration_utils.py  version_table.py
src/database/migrations/version/: __init__.py  v1_0_0__create_users_table.py  v1_1_0__add_user_profiles.py  v1_2_0__add_documents_table.py  v1_3_0__add_tags_system.py  v2_0_0__rename_password_column.py  v2_1_0__add_sessions_table.py
src/document_processing/: __init__.py  chunking.py  cleaning.py  extractors.py  metadata.py  processor.py
src/document_processing/extractors/: __init__.py  base_extractor.py  csv_extractor.py  docx_extractor.py  epub_extractor.py  html_extractor.py  image_extractor.py  json_extractor.py  markdown_extractor.py  pdf_extractor.py  pptx_extractor.py  txt_extractor.py  web_extractor.py  xlsx_extractor.py
src/utilities/: __init__.py  cleanup.py  formatter.py  helpers.py  logger.py  monitor.py  retry.py  task_queue.py  validator.py
src/vector_store/: __init__.py  chroma_client.py  faiss_client.py  index_manager.py  search_engine.py
tests/integration/: test_rag_pipeline.py
tests/unit/: __init__.py  test_config.py  test_conversation_memory.py  test_database.py  test_document_processor.py  test_embedding_service.py  test_llm_client.py  test_model_manager.py  test_rag_engine.py  test_utilities.py  test_vector_store.py
tracking_results/: P1_2_3_tracking_20260203_234048.json  P1_2_3_tracking_20260203_234502.json
