[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cockatoo_V1"
version = "0.1.0"
description = "Document-based RAG assistant for personal knowledge management"
authors = [{name = "Cockatoo_V1 Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.3.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/Cockatoo_V1"
Repository = "https://github.com/yourusername/Cockatoo_V1.git"
Issues = "https://github.com/yourusername/Cockatoo_V1/issues"

[project.scripts]
cockatoo = "src.cli:main"
cockatoo-web = "src.web:run_server"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml", "*.json", "*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = [
    "tests*",
    "docs*",
    "scripts*",
    "data*",
    "resources*",
    "examples*",
    "notebooks*"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/unit",
    "tests/integration"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: mark test for asyncio",
]
asyncio_mode = "strict"

filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore:Exception in thread.*_worker.*:pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_*",
    "*/tests/*",
    "*/__pycache__/*",
    "*.pyc",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",
    "C0103",
    "W0611",
    "R0903",
    "R0913",
    "R0914",
    "R0915",
    "R0801",
]